--- a/microservices/candidat/src/main/resources/application.properties
+++ b/microservices/candidat/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=candidat
+#H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+#DataSource
+spring.datasource.username=Badia
+spring.datasource.password=
+spring.datasource.url=jdbc:h2:file:./Database/Data/Candidat
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=create
