--- a/microservices/job/src/main/resources/application.properties
+++ b/microservices/job/src/main/resources/application.properties
@@ -11,3 +11,8 @@ server.port=8082
 #eureka registation
 eureka.client.service-url.defaultZone=http://localhost:8762/eureka
 eureka.client.register-with-eureka=true
+
+
+spring.data.rest.default-media-type=application/json
+spring.data.rest.return-body-on-create=true
+spring.data.rest.return-body-on-update=true
