--- a/microservices/candidat/src/main/resources/application.properties
+++ b/microservices/candidat/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=candidat
+server.port=8085
 #H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
@@ -6,7 +7,7 @@ spring.h2.console.path=/h2
 spring.datasource.username=Badia
 spring.datasource.password=
 #spring.datasource.url=jdbc:h2:file:./Database/Data/Candidat
-spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=create
 #eureka registation
 eureka.client.service-url.defaultZone=http://localhost:8762/eureka
