Added deleteCandidat feature

--- a/microservices/candidat/src/main/resources/application.properties
+++ b/microservices/candidat/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.jpa.hibernate.ddl-auto=create
 #eureka registation
 eureka.client.service-url.defaultZone=http://localhost:8762/eureka
 eureka.client.register-with-eureka=true
+server.port = 8081
